// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About renders correctly with all props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c8 {
  display: flex;
  gap: 0.75rem;
  flex-wrap: wrap;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 2rem;
  max-width: 680px;
}

@media (max-width: 1199px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        About
      </p>
      <h2
        class="c4 c5"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c6 c7"
      >
        Senior Frontend Developer and Tech Lead — 10+ years building consumer-facing web products: vehicle configurators, comparison platforms, streaming apps, and for the last 4+ years headless ecommerce with React, TypeScript, Next.js and Shopify. I specialize in frontend architecture and component-driven development for headless commerce. At JIBE eCommerce I've spent 4+ years across 15+ client storefronts, acting as tech lead on key projects and maintaining Compass, the design system powering them all. Before that: frontend architect at Overstappen.nl, Smart TV apps for Videoland, and FCA Group's vehicle configurators. I work best on small senior teams where ownership matters.
      </p>
      <div
        class="c8"
      >
        <span
          class="c9"
        >
          📍 Bangkok, Thailand
        </span>
        <span
          class="c9"
        >
          💼 Currently with capacity for new projects
        </span>
      </div>
    </section>
  </section>
</div>
`;

exports[`About renders correctly without optional tags 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  line-height: 1.7;
  margin-bottom: 2rem;
  max-width: 680px;
}

@media (max-width: 1199px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        About
      </p>
      <h2
        class="c4 c5"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c6 c7"
      >
        Senior Frontend Developer and Tech Lead — 10+ years building consumer-facing web products with React, Next.js, TypeScript and Shopify.
      </p>
    </section>
  </section>
</div>
`;
